--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/scripts/main.js">
+    <link rel="stylesheet" href="assets/scripts/questions.js">
+    <link rel="stylesheet" href="assets/scripts/scores.js">
+    <title>Coding Quiz</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>Coding-Quiz Pt.1</h1>
+        <a id = "highscore" href="scores.html">High Scores</a>
+        <nav>Timer</nav>
+    </header>
+
+    <main>
+        <section id = "quizbox">
+            <p id = "question">Coming Soon</p>
+            
+
+        </section>
+
+        <button id = "button">Start</button>
+
+    </main>
+
+    <script src="./assets/scripts/main.js"></script>
 </body>
 </html>
