added comments to main js with outline ideas for vars and functions

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section id = "quizbox">
             <p id = "question">Coming Soon</p>
-            
+            <p id = "answers">Coming Soon</p>
 
         </section>
 
