adding questions js file with initial 5 questions and answers

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/scripts/main.js">
-    <link rel="stylesheet" href="assets/scripts/questions.js">
-    <link rel="stylesheet" href="assets/scripts/scores.js">
+    
     <title>Coding Quiz</title>
 </head>
 
@@ -32,5 +30,7 @@
     </main>
 
     <script src="./assets/scripts/main.js"></script>
+    <script src="./assets/scripts/questions.js"></script>
+    <script src="./assets/scripts/scores.js"></script>
 </body>
 </html>
