added timer function to remain at last time logged when quiz is complete.

--- a/index.html
+++ b/index.html
@@ -15,22 +15,17 @@
     <header>
         <h1>Coding-Quiz Pt.1</h1>
         <a id = "highscore" href="scores.html">High Scores</a>
-        <nav>Timer</nav>
+        <nav id = "timekeeper">Timer</nav>
     </header>
 
     <main>
         <div id ="quizbox">
-            <section id = "questionbox" class="hide">
+            <section id = "questionBox" class="hide">
                 <div id = "question">Coming Soon</div>
-                <div id = "answer" class ="btn-grd"></div>
-                    <button class="btn">Answer 1</button>
-                    <button class="btn">Answer 2</button>
-                    <button class="btn">Answer 3</button>
-                    <button class="btn">Answer 4</button>
+                <div id = "answerButton" class ="btn-grd"></div>
             </section>
             <section class = "controls">
-                <button id = "startbutton" class="btn">Start</button>
-                <button id = "nextbutton" class ="next-btn btn hide"> Next</button>
+                <button id = "startButton" class="btn">Start</button>
             </section>   
         </div>
 
