updating with timer function

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
             <section class = "controls">
                 <button id = "startButton" class="btn">Start</button>
             </section>   
+
+            <section id = "userScore" class = "hide">
+                <div id = "score"></div>
+                <input id = "initials">
+                <p>Enter initials</p>
+                <button id = "submit" class = "btn">Submit</button>
+            </section>
         </div>
 
     </main>
