updating scores js file and main JS files. Trying to make the high scores page display

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <h1>Coding-Quiz Pt.1</h1>
-        <a id = "highscore" href="scores.html">High Scores</a>
+        <a id = "highScore" href="scores.html">High Scores</a>
         <nav id = "timekeeper">Timer</nav>
     </header>
 
@@ -38,11 +38,7 @@
 
     </main>
 
-        
-
-
     <script src="./assets/scripts/main.js"></script>
-    <script src="./assets/scripts/questions.js"></script>
-    <script src="./assets/scripts/scores.js"></script>
+
 </body>
 </html>
