--- a/scores.html
+++ b/scores.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
 
         <title>Coding Quiz</title>
@@ -15,12 +14,15 @@
         <h1>High Scores</h1>
 
     </header>
+<main>
+    <section id = scores>
+     <p>MB 100</p>
+    </section>
+</main>
 
-    <p>MB 100</p>
 
     <script src="./assets/scripts/main.js"></script>
     <link rel="stylesheet" href="assets/scripts/main.js">
-    <link rel="stylesheet" href="assets/scripts/questions.js">
     <link rel="stylesheet" href="assets/scripts/scores.js">
 </body>
 </html>
