updating with working code

--- a/scores.html
+++ b/scores.html
@@ -16,13 +16,10 @@
     </header>
 <main>
     <section id = scores>
-     <p>MB 100</p>
+     
     </section>
 </main>
 
-
-    <script src="./assets/scripts/main.js"></script>
-    <link rel="stylesheet" href="assets/scripts/main.js">
-    <link rel="stylesheet" href="assets/scripts/scores.js">
+    <script src ="assets/scripts/scores.js"></script>
 </body>
 </html>
